--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json -o",
+    "start": "ng serve --port 3000 --proxy-config proxy.conf.json -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
